# build-your-own-rag-chatbot

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/: chatbot.py  config.py  utils.py
